// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should display combo card 1`] = `
Object {
  Symbol(dom): <body>
    <legend />
    <div
      class="oc-panel panel-1"
      data-oc-id="panel-1"
      id="adyen-collapse-heading"
    >
      <div
        class="collapse-heading"
      >
        <strong>
           
          <span
            class="collapse-toggle collapsed"
            data-target="#adyen-scheme-wrapper"
            data-toggle="collapse"
          >
            <button />
          </span>
        </strong>
      </div>
      <div
        class="adyen-wrapper collapse"
        id="adyen-scheme-wrapper"
      >
        <div
          class="loader-wrapper hide"
        >
          <div
            class="lds-ring"
          >
            <div />
            <div />
            <div />
            <div />
          </div>
          <div
            style="font-weight: bold; font-size: 16px;"
          >
            Processing...
          </div>
        </div>
        <div
          class="adyen-component"
          id="adyen-card-payment"
        >
          <div
            class="adyen-checkout__field-wrapper"
          >
            <div
              class="adyen-checkout__field"
            >
              <label
                class="adyen-checkout__label"
              >
                <span
                  class="adyen-checkout__label__text"
                />
                <span
                  class="adyen-checkout__input-wrapper"
                >
                  <select
                    aria-required="true"
                    class="adyen-checkout__input adyen-checkout__input--small adyen-checkout__select"
                    id="comboCard"
                    style="-webkit-appearance: none;-moz-appearance: none;appearance: none;background: url('http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png') white no-repeat 98.5% !important;background: url('http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png') white no-repeat calc(100% - 10px) !important;"
                    type="text"
                  >
                    <option
                      value="creditCard"
                    >
                      translated_creditCard
                    </option>
                    <option
                      value="debitCard"
                    >
                      translated_debitCard
                    </option>
                  </select>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
}
`;

exports[`Card should display installments 1`] = `
Object {
  Symbol(dom): <body>
    <legend />
    <div
      class="oc-panel panel-1"
      data-oc-id="panel-1"
      id="adyen-collapse-heading"
    >
      <div
        class="collapse-heading"
      >
        <strong>
           
          <span
            class="collapse-toggle collapsed"
            data-target="#adyen-scheme-wrapper"
            data-toggle="collapse"
          >
            <button />
          </span>
        </strong>
      </div>
      <div
        class="adyen-wrapper collapse"
        id="adyen-scheme-wrapper"
      >
        <div
          class="loader-wrapper hide"
        >
          <div
            class="lds-ring"
          >
            <div />
            <div />
            <div />
            <div />
          </div>
          <div
            style="font-weight: bold; font-size: 16px;"
          >
            Processing...
          </div>
        </div>
        <div
          class="adyen-component"
          id="adyen-card-payment"
        >
          <div
            class="adyen-checkout__field-wrapper"
          >
            <div
              class="adyen-checkout__field"
            >
              <label
                class="adyen-checkout__label"
              >
                <span
                  class="adyen-checkout__label__text"
                />
                <span
                  class="adyen-checkout__input-wrapper"
                >
                  <select
                    aria-required="true"
                    class="adyen-checkout__input adyen-checkout__input--small adyen-checkout__select"
                    id="installments"
                    style="-webkit-appearance: none;-moz-appearance: none;appearance: none;background: url('http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png') white no-repeat 98.5% !important;background: url('http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png') white no-repeat calc(100% - 10px) !important;"
                    type="text"
                  >
                    <option
                      value=""
                    >
                      translated_noInstallmentsMsg
                    </option>
                    <option
                      value=""
                    >
                      3x
                    </option>
                    <option
                      value=""
                    >
                      5x
                    </option>
                  </select>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
}
`;
